--- a/package.json
+++ b/package.json
@@ -12,15 +12,22 @@
     "@clerk/nextjs": "^6.19.4",
     "@prisma/client": "^6.8.2",
     "flowbite": "^3.1.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.3.2",
+    "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-qr-code": "^2.0.15",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.17.50",
+    "@types/qrcode": "^1.5.5",
+    "@types/qrcode.react": "^1.0.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
