--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.19.4",
     "@prisma/client": "^6.8.2",
     "flowbite": "^3.1.2",
+    "framer-motion": "^12.16.0",
     "jsonwebtoken": "^9.0.2",
     "next": "15.3.2",
     "qrcode": "^1.5.4",
