Move eslint and @types/jsonwebtoken to dependencies for successful build

--- a/package.json
+++ b/package.json
@@ -21,19 +21,19 @@
     "react-dom": "^19.0.0",
     "react-qr-code": "^2.0.15",
     "xlsx": "^0.18.5",
-    "@tailwindcss/postcss": "^4",   
-    "@types/node": "^20.17.50",      
-    "@types/react": "^19"            
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20.17.50",
+    "@types/react": "^19",
+    "eslint": "^9",                  
+    "@types/jsonwebtoken": "^9.0.9"  
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/jsonwebtoken": "^9.0.9",
     "@types/qrcode": "^1.5.5",
     "@types/qrcode.react": "^1.0.5",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
-    "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "prisma": "^6.8.2",
     "tailwindcss": "^4",
