--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate" 
-
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.19.4",
     "@prisma/client": "^6.8.2",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.2",
     "flowbite": "^3.1.2",
     "framer-motion": "^12.16.0",
+    "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
     "next": "15.3.2",
     "qrcode": "^1.5.4",
