--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
     "next": "15.3.2",
+    "node-fetch": "^3.3.2",
     "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
