--- a/package.json
+++ b/package.json
@@ -11,13 +11,18 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.19.4",
+    "@langchain/openai": "^0.5.13",
+    "@pinecone-database/pinecone": "^6.1.0",
     "@prisma/client": "^6.8.2",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
+    "chromadb": "^3.0.0",
     "flowbite": "^3.1.2",
     "framer-motion": "^12.16.0",
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
+    "langchain": "^0.3.28",
+    "lucide-react": "^0.515.0",
     "next": "15.3.2",
     "node-fetch": "^3.3.2",
     "qrcode": "^1.5.4",
